--- a/CodeNotesInteractive/app/src/main/res/layout/activity_chat.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="alpay.com.codenotesinteractive.ChatActivity">
+    tools:context="alpay.com.codenotesinteractive.chat.ChatActivity">
 
 
     <android.support.v7.widget.RecyclerView
