--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_web_simulation.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_web_simulation.xml
@@ -34,6 +34,7 @@
 
                     <RadioButton
                         android:id="@+id/springscale"
+                        android:checked="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/springscale" />
@@ -45,6 +46,12 @@
                         android:text="@string/forcevector" />
 
                 </RadioGroup>
+
+                <CheckBox
+                    android:id="@+id/slow_motion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/slowmotion"/>
 
                 <EditText
                     android:id="@+id/incline_angle"
