--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_compiler.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_compiler.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="alpay.com.codenotesinteractive.compiler.CompilerActivity">
+    android:layout_height="match_parent">
 
         <SurfaceView
             android:id="@+id/surface_view"
