--- a/CodeNotesInteractive/app/src/main/res/values/styles.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CardTextName" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">@color/textColorDark</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
+    <style name="CardTextDetail" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">@color/textColorLight</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
 </resources>
