--- a/CodeNotesInteractive/app/src/main/res/values/colors.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#e65100</color>
     <color name="colorPrimaryDark">#ac1900</color>
     <color name="colorAccent">#26a69a</color>
+    <color name="textColorDark">#37474f</color>
+    <color name="textColorMid">#455a64</color>
+    <color name="textColorLight">#62727b</color>
+    <color name="cardview_initial_background">#e0e0e0</color>
 </resources>
