--- a/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
@@ -1,48 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
+    android:layout_height="150dp"
+    android:layout_marginLeft="12dp"
+    android:layout_marginRight="12dp"
     android:elevation="100dp"
     android:layout_margin="10dp"
     card_view:cardBackgroundColor="@color/cardview_initial_background"
-    card_view:cardCornerRadius="8dp">
+    card_view:cardCornerRadius="12dp">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="7">
-
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/card_image"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_height="100dp"
+            android:padding="15dp"
+            android:layout_weight="0.35"
             android:contentDescription="@string/card_image_description" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_weight="0.65"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/content"
                 style="@style/CardTextName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp" />
 
             <TextView
                 android:id="@+id/detail"
                 style="@style/CardTextDetail"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp" />
 
@@ -53,3 +52,8 @@
 
 
 </android.support.v7.widget.CardView>
+
+
+
+
+
