--- a/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview"
     android:layout_width="fill_parent"
     android:layout_height="150dp"
@@ -46,11 +46,7 @@
                 android:padding="5dp" />
 
         </LinearLayout>
-
-
     </LinearLayout>
-
-
 </android.support.v7.widget.CardView>
 
 
