--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_web_simulation.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_web_simulation.xml
@@ -22,6 +22,7 @@
                 android:layout_marginTop="10dp" />
 
             <LinearLayout
+                android:id="@+id/parameter_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
