--- a/CodeNotesInteractive/app/src/main/assets/ConstantAcceleration/styles.css
+++ b/CodeNotesInteractive/app/src/main/assets/ConstantAcceleration/styles.css
@@ -140,7 +140,6 @@
     margin-left: auto;                             /* Zentrierung */
     margin-right: auto;                            /* Zentrierung */
     padding: 10px;                                 /* Innenabstand */
-    background-color: #80ffa0;                     /* Hintergrundfarbe */
     border: 8px double #000000;                    /* Rand */
     font-size: 18px;                               /* Schriftgröße */
     }
@@ -159,23 +158,18 @@
   /* Logo mit Link zum Inhaltsverzeichnis */
   
   div#Index {
-    width: 170px; 
+    width: 10px; 
     margin: 20px auto 20px auto;
     border: 5px double #000000;
-    background-color: silver;
     }
     
   div#Index1 {
     padding: 12px;
-    background-color: #ffff00;
-    border: 1px solid #000000;
     text-align: center;
     }
     
   div#Index2 {
     padding: 8px;
-    background-color: #ffff00;
-    border: 1px solid #000000;
     text-align: center;
     font-size: 16px;
     font-weight: bold;
@@ -195,25 +189,19 @@
   /* Gesamte App */
      
   div#total {
-    position: relative;
     margin-top: 20px;                              /* Abstand nach oben */
-    margin-left: auto; margin-right: auto;         /* Waagrechte Zentrierung */
     }
     
   /* Zeichenfläche */
   
   div#canvas {
-    position: absolute;
-    background-color: #ffff00;                     /* Hintergrundfarbe */
-    border: 1px solid #000000;                     /* Rand */
+    position: absolute;                  /* Hintergrundfarbe */
     }
     
   /* Schaltfläche */
     
   div#panel, div#panel1, div#panel2 {
-    position: absolute;
-    background-color: #00ff00;                     /* Hintergrundfarbe */
-    border: 1px solid #000000;                     /* Rand */
+    position: absolute;                /* Hintergrundfarbe */
     font-size: 12px;                               /* Schriftgröße */
     font-weight: bold;                             /* Fettdruck */
     }
