--- a/CodeNotesInteractive/app/src/main/res/values/colors.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="textColorLight">#62727b</color>
     <color name="cardview_initial_background">#e0e0e0</color>
 
-    <color name="tutorial_page1">#d84315</color>
+    <color name="tutorial_page1">#1b1464</color>
     <color name="tutorial_page2">#ff6f00</color>
     <color name="tutorial_page3">#f9a825</color>
     <color name="tutorial_page4">#9e9d24</color>
