--- a/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/simulation_cardview.xml
@@ -5,30 +5,32 @@
     android:id="@+id/cardview"
     android:layout_width="fill_parent"
     android:layout_height="150dp"
-    android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp"
-    android:elevation="100dp"
     android:layout_margin="10dp"
+    android:elevation="100dp"
     card_view:cardBackgroundColor="@color/cardview_initial_background"
     card_view:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="4">
 
         <ImageView
             android:id="@+id/card_image"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:padding="15dp"
-            android:layout_weight="0.35"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
+            android:padding="5dp"
+            android:layout_weight="1"
             android:contentDescription="@string/card_image_description" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.65"
+            android:layout_gravity="right"
+            android:layout_weight="3"
+            android:padding="5dp"
             android:orientation="vertical">
 
             <TextView
