--- a/CodeNotesInteractive/app/src/main/res/layout/activity_base.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/activity_base.xml
@@ -11,6 +11,7 @@
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
+            android:background="#FFF"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_navigation"
@@ -21,6 +22,7 @@
         <android.support.design.widget.BottomNavigationView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:background="#FFF"
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
