--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_web_simulation.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_web_simulation.xml
@@ -22,73 +22,81 @@
                 android:orientation="horizontal"
                 android:weightSum="4">
 
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="8dp"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/param1_text"
-                        android:layout_width="wrap_content"
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:paddingBottom="8dp"
-                        android:paddingTop="8dp" />
+                        android:layout_margin="8dp"
+                        android:weightSum="3"
+                        android:orientation="horizontal">
 
-                    <org.angmarch.views.NiceSpinner
-                        android:id="@+id/param1_spinner"
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/param1_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:paddingBottom="8dp"
+                            android:paddingTop="8dp" />
+
+                        <TextView
+                            android:id="@+id/param2_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingBottom="8dp"
+                            android:layout_weight="1"
+                            android:paddingTop="8dp" />
+
+                        <TextView
+                            android:id="@+id/param3_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingBottom="8dp"
+                            android:layout_weight="1"
+                            android:paddingTop="8dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom" />
+                        android:layout_margin="8dp"
+                        android:weightSum="3"
+                        android:orientation="horizontal">
 
-                </LinearLayout>
+                        <org.angmarch.views.NiceSpinner
+                            android:id="@+id/param1_spinner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="center"
+                            android:paddingBottom="8dp" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="8dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                        <org.angmarch.views.NiceSpinner
+                            android:id="@+id/param2_spinner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="center"
+                            android:paddingBottom="8dp" />
 
-                    <TextView
-                        android:id="@+id/param2_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:paddingBottom="8dp"
-                        android:paddingTop="8dp" />
+                        <org.angmarch.views.NiceSpinner
+                            android:id="@+id/param3_spinner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="center"
+                            android:paddingBottom="8dp"/>
 
-                    <org.angmarch.views.NiceSpinner
-                        android:id="@+id/param2_spinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="8dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/param3_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:paddingBottom="8dp"
-                        android:paddingTop="8dp" />
-
-                    <org.angmarch.views.NiceSpinner
-                        android:id="@+id/param3_spinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -111,17 +119,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp" />
 
-            <Button
-                android:id="@+id/resetButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/reset" />
-
-
         </LinearLayout>
 
-
     </ScrollView>
-
 
 </FrameLayout>
