--- a/CodeNotesInteractive/app/src/main/assets/OhmsLaw/styles.css
+++ b/CodeNotesInteractive/app/src/main/assets/OhmsLaw/styles.css
@@ -64,6 +64,7 @@
   
   p {                      
     line-height: 1.3;                              /* Zeilenabstand */
+    font-size: 24px;
     }
     
   /* Ungeordnete und geordnete Listen */
@@ -204,7 +205,6 @@
   
   div#canvas {
     position: absolute;
-    background-color: #ffff00;                     /* Hintergrundfarbe */
     border: 1px solid #000000;                     /* Rand */
     }
     
@@ -212,9 +212,9 @@
     
   div#panel, div#panel1, div#panel2 {
     position: absolute;
-    background-color: #00ff00;                     /* Hintergrundfarbe */
+    background-color: #BDBDBD;                     /* Hintergrundfarbe */
     border: 1px solid #000000;                     /* Rand */
-    font-size: 12px;                               /* Schriftgröße */
+    font-size: 24px;                               /* Schriftgröße */
     font-weight: bold;                             /* Fettdruck */
     }
     
@@ -230,17 +230,17 @@
     position: absolute;
     white-space: nowrap;                           /* Kein Zeilenumbruch bei Leerzeichen */
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 24px;
     }
     
   /* Schaltknopf */
     
   button {
-    height: 30px;                                  /* Höhe */
+    height: 60px;                                  /* Höhe */
     border-radius: 0px;                            /* Abgerundete Ecken verhindern */
     margin-left: 10px;                             /* Abstand vom linken Rand */
     font-family: sans-serif;                       /* Schriftart */
-    font-size: 12px;                               /* Schriftgröße */
+    font-size: 24px;                               /* Schriftgröße */
     font-weight: bold;                             /* Fettdruck */
     } 
     
