--- a/CodeNotesInteractive/app/src/main/res/values/styles.xml
+++ b/CodeNotesInteractive/app/src/main/res/values/styles.xml
@@ -6,8 +6,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
     </style>
 
+    <style name="MyActionButtonOverflow" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_howto</item>
+        <item name="android:background">?android:attr/actionBarItemBackground</item>
+        <item name="android:contentDescription">"Tutorial"</item>
+    </style>
     <style name="CardTextName" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">@color/textColorDark</item>
         <item name="android:typeface">monospace</item>
