--- a/CodeNotesInteractive/app/src/main/res/layout/activity_home.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:rfal="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/home_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/activity_main_toolbar"
@@ -23,46 +24,15 @@
         android:layout_height="match_parent" />
 
 
-    <com.robertlevonyan.views.customfloatingactionbutton.FloatingLayout
-        android:id="@+id/home_fab"
-        android:layout_width="match_parent"
+    <android.support.design.widget.FloatingActionButton
+        android:src="@drawable/ic_add_white_24dp"
+        android:id="@+id/button_fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        app:fabMenuGravity="bottom|right">
+        android:layout_alignParentRight="true" />
 
-        <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
-            android:id="@+id/fab1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabColor="#acdace"
-            app:fabIcon="@drawable/ic_chat" />
-
-        <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
-            android:id="@+id/fab2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabColor="#ff9c10"
-            app:fabIcon="@drawable/ic_chat"
-            app:fabSizes="mini" />
-
-        <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
-            android:id="@+id/fab3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabColor="#0b7bc1"
-            app:fabIcon="@drawable/ic_chat"
-            app:fabSizes="mini" />
-
-        <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
-            android:id="@+id/fab4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabColor="#ea201c"
-            app:fabIcon="@drawable/ic_chat"
-            app:fabSizes="mini" />
-
-    </com.robertlevonyan.views.customfloatingactionbutton.FloatingLayout>
 
 </RelativeLayout>
 
