--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_chat.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_chat.xml
@@ -4,11 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentTop="true"/>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/empty_view"
         android:paddingTop="10dp"
         android:paddingBottom="50dp"
         android:clipToPadding="false"
