--- a/CodeNotesInteractive/app/src/main/res/layout/activity_home.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/activity_home.xml
@@ -20,6 +20,8 @@
 
     <FrameLayout
         android:id="@+id/fragment_container_home"
+        android:layout_alignTop="@+id/activity_main_toolbar"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -35,4 +37,3 @@
 
 
 </RelativeLayout>
-
