--- a/CodeNotesInteractive/app/src/main/res/layout/fragment_todonotes.xml
+++ b/CodeNotesInteractive/app/src/main/res/layout/fragment_todonotes.xml
@@ -42,5 +42,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+
+        <android.support.design.widget.FloatingActionButton
+            android:src="@drawable/ic_add_white_24dp"
+            android:id="@+id/addToDoItemFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|right"
+            app:layout_anchorGravity="bottom|right|end"
+            app:layout_behavior="alpay.com.codenotesinteractive.studynotes.ScrollingFABBehaviour"
+            />
+
+
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
